--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "ollama-performance-test",
   "version": "1.0.0",
-  "description": "Tool to compare response speeds of different Ollama models",
+  "description": "A tool to compare response speeds of different Ollama models",
   "main": "ollama-speed-test.js",
   "type": "module",
   "scripts": {
     "test": "node ollama-speed-test.js"
   },
-  "keywords": [
-    "ollama",
-    "speed",
-    "benchmark",
-    "llm",
-    "performance"
-  ],
+  "keywords": ["ollama", "performance", "testing", "llm", "ai"],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "ollama": "^0.4.9"
+    "ollama": "^0.5.15"
   }
 }
